--- a/.github/workflows/amd64.yml
+++ b/.github/workflows/amd64.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   pull_and_package:
-    runs-on: ubuntu-latest
+    runs-on: centos-latest
 
     steps:
     - name: Checkout repository
